fix: decrease amount of hero slider slides to load properly, adjust styles, add another sliders to other pages

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,8 @@ TODO:
 2. sizes of cards and fonts
 3. interactive search bar
 4. load more at least for actor's movies
-5. overview limit with button learn more
+5. overview limit with button learn more +
+6. pagination, navigation sliders styles
 
 
 problems i have been encountered with:
